# aws-glacier-batch

./: .gitignore  README.md  README.rst  pyproject.toml
aws_glacier_batch/: aws-glacier.py
tests/: test_aws_glacier_batch.py
