[tool.poetry]
name = "aws-glacier-batch"
version = "0.1.0"
description = ""
authors = ["Ben Dray <ben.dray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
initiate = "aws_glacier_batch.aws-glacier:initiate_vault_job"
status = "aws_glacier_batch.aws-glacier:job_status_check"
download ="aws_glacier_batch.aws-glacier:download_vault_inventory"
delete = "aws_glacier_batch.aws-glacier:delete_archives"